[fix] Css images in mobile overflowing

--- a/css/index.scss
+++ b/css/index.scss
@@ -530,6 +530,10 @@ code {
 	// 	margin: 1em 0 0.2em;
 	// }
 
+	img {
+		max-width: 100%;
+	}
+
 	.outline {
 		&-4,
 		&-5,
